# NoisyQuantumSimulator

./: =  README.md  diagnose_bb.py  fix_hamiltonian.py  fix_notebook.py  proposal.txt  pyproject.toml  validate_bangbang.py
calibration_data/: README.md
docs/: ARCHITECTURE.md
examples/: README.md  neutral_atoms_rydberg_cz_gate.ipynb  research_parameter_sweeps.py
scripts/archive/: debug_jp_7seg.py  debug_jp_fast.py  debug_jp_optimize.py  debug_jp_physics.py  debug_jp_refine.py  diagnose_v_omega.py  generate_figures.py  generate_research_figures.py  quick_check.py  scan_jp_params.py  sweep_v_omega.py  test_actual_noise.py  test_baselines.py  test_cz_verbose.py  test_full_optimize.py  test_jp_blockade.py  test_jp_interpretations.py  test_jp_validated.py  test_lp_baseline.py  test_mesolve.py  test_mesolve_direct.py  test_optimize_jp.py  test_optimize_lp.py  test_pareto.py  test_pareto_both.py  test_phase.py  test_sim.py  test_smooth_jp.py  test_weak_blockade.py  verify_literature.py  verify_phase_penalty.py
src/qpu_simulator/: __init__.py
src/qpu_simulator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/qpu_simulator/architecture/: __init__.py  scheduler.py  simulator.py  topology.py
src/qpu_simulator/architecture/compiler/: __init__.py  decomposition.py  routing.py
src/qpu_simulator/architecture/qec/: __init__.py  color_code.py  decoders.py  ldpc_codes.py  surface_code.py
src/qpu_simulator/hardware_configs/: __init__.py  cavity_qed.py  neutral_atoms.py  trapped_ions.py
src/qpu_simulator/micro_physics/: __init__.py  base.py
src/qpu_simulator/micro_physics/cavity_qed/: __init__.py  atom_cavity_coupling.py  cavity_gates.py  measurement.py
src/qpu_simulator/micro_physics/neutral_atoms/: __init__.py  aod_slm_motion.py  cooling.py  measurement.py  optical_tweezers.py  rydberg_gates.py  single_qubit_gates.py
src/qpu_simulator/micro_physics/neutral_atoms/rydberg_gates/: __init__.py  atom_database.py  configurations.py  constants.py  cz_gate_optimization_demo.ipynb  hamiltonians.py  laser_physics.py  noise_models.py  optimization.py  optimize_cz_gate.py  optimize_jp_protocols.py  protocols.py  pulse_shaping.py  simulation.py  trap_physics.py  visualization.py
src/qpu_simulator/micro_physics/trapped_ions/: __init__.py
src/qpu_simulator/noise_models/: __init__.py  leakage.py  loss.py  pauli_channels.py
src/qpu_simulator/primitives/: __init__.py  base.py  cooling.py  gates.py  idle.py  measurement.py  move.py
src/qpu_simulator/utils/: __init__.py  math_utils.py  visualization.py
tests/: __init__.py  test_jp_bangbang_investigation.py
tests/test_architecture/: __init__.py
tests/test_micro_physics/: __init__.py  test_rydberg_noise_physics.py
tests/test_primitives/: __init__.py
(+10 files in other folders)
